--- a/package.json
+++ b/package.json
@@ -21,11 +21,16 @@
     "@angular/platform-browser-dynamic": "~6.1.1",
     "@angular/router": "~6.1.1",
     "@ionic-native/core": "5.0.0-beta.21",
+    "@ionic-native/geofence": "^4.17.0",
+    "@ionic-native/google-maps": "^4.15.1",
     "@ionic-native/splash-screen": "5.0.0-beta.21",
     "@ionic-native/status-bar": "5.0.0-beta.21",
     "@ionic/angular": "4.0.0-beta.15",
+    "@ionic/storage": "^2.2.0",
     "@material/ripple": "^0.41.0",
     "@material/top-app-bar": "^0.41.0",
+    "cordova-plugin-geofence": "0.7.0",
+    "cordova-sqlite-storage": "2.5.1",
     "core-js": "^2.5.3",
     "material-components-web": "^0.41.0",
     "rxjs": "6.2.2",
@@ -58,5 +63,11 @@
     "tslint": "~5.11.0",
     "typescript": "~2.9.2"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-sqlite-storage": {},
+      "cordova-plugin-geofence": {}
+    }
+  }
 }
