--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "@angular/platform-browser-dynamic": "~6.1.1",
     "@angular/router": "~6.1.1",
     "@ionic-native/core": "5.0.0-beta.21",
-    "@ionic-native/geofence": "^4.17.0",
-    "@ionic-native/google-maps": "^4.15.1",
+    "@ionic-native/geofence": "5.0.0-beta.21",
+    "@ionic-native/google-maps": "5.0.0-beta.21",
     "@ionic-native/splash-screen": "5.0.0-beta.21",
     "@ionic-native/status-bar": "5.0.0-beta.21",
     "@ionic/angular": "4.0.0-beta.15",
@@ -30,6 +30,7 @@
     "@material/ripple": "^0.41.0",
     "@material/top-app-bar": "^0.41.0",
     "cordova-plugin-geofence": "0.7.0",
+    "cordova-plugin-googlemaps": "2.4.6",
     "cordova-sqlite-storage": "2.5.1",
     "core-js": "^2.5.3",
     "material-components-web": "^0.41.0",
@@ -67,7 +68,11 @@
   "cordova": {
     "plugins": {
       "cordova-sqlite-storage": {},
-      "cordova-plugin-geofence": {}
+      "cordova-plugin-geofence": {},
+      "cordova-plugin-googlemaps": {
+        "API_KEY_FOR_ANDROID": "(API_KEY_FOR_ANDROID)",
+        "API_KEY_FOR_IOS": "(API_KEY_FOR_IOS)"
+      }
     }
   }
 }
