--- a/package.json
+++ b/package.json
@@ -29,10 +29,20 @@
     "@ionic/storage": "^2.2.0",
     "@material/ripple": "^0.41.0",
     "@material/top-app-bar": "^0.41.0",
+    "cordova-browser": "5.0.4",
+    "cordova-plugin-add-swift-support": "^1.6.0",
+    "cordova-plugin-compat": "^1.2.0",
+    "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-geofence": "0.7.0",
     "cordova-plugin-googlemaps": "2.4.6",
+    "cordova-plugin-ionic-keyboard": "^2.1.3",
+    "cordova-plugin-ionic-webview": "^2.2.0",
+    "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-statusbar": "^2.4.2",
+    "cordova-plugin-whitelist": "^1.3.3",
     "cordova-sqlite-storage": "2.5.1",
     "core-js": "^2.5.3",
+    "es6-promise-plugin": "^4.2.2",
     "material-components-web": "^0.41.0",
     "rxjs": "6.2.2",
     "zone.js": "^0.8.26"
@@ -70,9 +80,15 @@
       "cordova-sqlite-storage": {},
       "cordova-plugin-geofence": {},
       "cordova-plugin-googlemaps": {
-        "API_KEY_FOR_ANDROID": "(API_KEY_FOR_ANDROID)",
-        "API_KEY_FOR_IOS": "(API_KEY_FOR_IOS)"
-      }
+        "API_KEY_FOR_ANDROID": "AIzaSyB0Dk71Zs2ICm1NRoUCTCjdB6E6IS-CrLs",
+        "API_KEY_FOR_IOS": "AIzaSyCfshD83y_WoimDWwf1R31gEjR2uNOWSt4"
+      },
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-ionic-keyboard": {}
     }
   }
 }
