--- a/package.json
+++ b/package.json
@@ -33,18 +33,19 @@
     "cordova-plugin-add-swift-support": "^1.6.0",
     "cordova-plugin-compat": "^1.2.0",
     "cordova-plugin-device": "^2.0.2",
-    "cordova-plugin-geofence": "0.7.0",
-    "cordova-plugin-googlemaps": "2.4.6",
+    "cordova-plugin-geofence": "^0.7.0",
+    "cordova-plugin-googlemaps": "^2.4.6",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "^2.2.0",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
-    "cordova-sqlite-storage": "2.5.1",
+    "cordova-sqlite-storage": "^2.5.1",
     "core-js": "^2.5.3",
     "es6-promise-plugin": "^4.2.2",
     "material-components-web": "^0.41.0",
     "rxjs": "6.2.2",
+    "shortid": "^2.2.14",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
