--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "@ionic-native/core": "5.0.0-beta.21",
     "@ionic-native/geofence": "5.0.0-beta.21",
     "@ionic-native/google-maps": "5.0.0-beta.21",
-    "@ionic-native/splash-screen": "5.0.0-beta.21",
+    "@ionic-native/splash-screen": "^5.0.0-beta.21",
     "@ionic-native/status-bar": "5.0.0-beta.21",
     "@ionic/angular": "4.0.0-beta.15",
     "@ionic/storage": "^2.2.0",
+    "@material/card": "^0.41.0",
     "@material/ripple": "^0.41.0",
+    "@material/theme": "^0.41.0",
     "@material/top-app-bar": "^0.41.0",
     "cordova-browser": "5.0.4",
     "cordova-plugin-add-swift-support": "^1.6.0",
@@ -37,7 +39,7 @@
     "cordova-plugin-googlemaps": "^2.4.6",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "^2.2.0",
-    "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-splashscreen": "5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova-sqlite-storage": "^2.5.1",
