--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "@ionic/angular": "4.0.0-beta.15",
     "@ionic/storage": "^2.2.0",
     "@material/card": "^0.41.0",
+    "@material/list": "^0.41.0",
     "@material/ripple": "^0.41.0",
     "@material/theme": "^0.41.0",
     "@material/top-app-bar": "^0.41.0",
     "cordova-browser": "5.0.4",
+    "cordova-ios": "4.5.5",
     "cordova-plugin-add-swift-support": "^1.6.0",
     "cordova-plugin-compat": "^1.2.0",
     "cordova-plugin-device": "^2.0.2",
