--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "@material/ripple": "^0.41.0",
     "@material/theme": "^0.41.0",
     "@material/top-app-bar": "^0.41.0",
-    "cordova-browser": "^5.0.4",
+    "cordova-android": "7.1.1",
+    "cordova-browser": "5.0.4",
     "cordova-ios": "4.5.5",
     "cordova-plugin-add-swift-support": "^1.6.0",
     "cordova-plugin-compat": "^1.2.0",
