Update view code

--- a/package.json
+++ b/package.json
@@ -33,8 +33,9 @@
     "@material/ripple": "^0.41.0",
     "@material/theme": "^0.41.0",
     "@material/top-app-bar": "^0.41.0",
+    "cordova-browser": "5.0.4",
     "cordova-ios": "4.5.5",
-    "cordova-plugin-add-swift-support": "^1.6.0",
+    "cordova-plugin-add-swift-support": "^1.7.2",
     "cordova-plugin-compat": "^1.2.0",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-geofence": "^0.7.0",
@@ -93,7 +94,8 @@
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-add-swift-support": {}
     },
     "platforms": []
   }
