--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@material/ripple": "^0.41.0",
     "@material/theme": "^0.41.0",
     "@material/top-app-bar": "^0.41.0",
+    "@material/typography": "^0.41.0",
     "cordova-browser": "5.0.4",
     "cordova-ios": "4.5.5",
     "cordova-plugin-add-swift-support": "^1.7.2",
@@ -97,6 +98,8 @@
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-add-swift-support": {}
     },
-    "platforms": []
+    "platforms": [
+      "browser"
+    ]
   }
 }
