--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "cordova-plugin-compat": "^1.2.0",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-geofence": "^0.7.0",
-    "cordova-plugin-googlemaps": "^2.4.6",
+    "cordova-plugin-googlemaps": "git+https://github.com/mapsplugin/cordova-plugin-googlemaps.git#multiple_maps",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "^2.2.1",
     "cordova-plugin-splashscreen": "^5.0.2",
@@ -52,6 +52,7 @@
     "material-components-web": "^0.41.0",
     "rxjs": "6.2.2",
     "shortid": "^2.2.14",
+    "variable": "0.0.3",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
@@ -86,12 +87,6 @@
     "plugins": {
       "cordova-sqlite-storage": {},
       "cordova-plugin-geofence": {},
-      "cordova-plugin-googlemaps": {
-        "API_KEY_FOR_ANDROID": "AIzaSyB0Dk71Zs2ICm1NRoUCTCjdB6E6IS-CrLs",
-        "API_KEY_FOR_IOS": "AIzaSyCfshD83y_WoimDWwf1R31gEjR2uNOWSt4",
-        "PLAY_SERVICES_VERSION": "15.0.1",
-        "ANDROID_SUPPORT_V4_VERSION": "27.+"
-      },
       "cordova-plugin-whitelist": {},
       "cordova-plugin-statusbar": {},
       "cordova-plugin-device": {},
@@ -100,7 +95,15 @@
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
       "cordova-plugin-ionic-keyboard": {},
-      "cordova-plugin-add-swift-support": {}
+      "cordova-plugin-add-swift-support": {},
+      "cordova-plugin-googlemaps": {
+        "API_KEY_FOR_ANDROID": "AIzaSyC8FVblmzrCmPKffbexACfScZPG29ur9go",
+        "API_KEY_FOR_IOS": "AIzaSyC8FVblmzrCmPKffbexACfScZPG29ur9go",
+        "PLAY_SERVICES_VERSION": "15.0.1",
+        "ANDROID_SUPPORT_V4_VERSION": "27.+",
+        "LOCATION_WHEN_IN_USE_DESCRIPTION": "This app wants to get your location while this app runs only.",
+        "LOCATION_ALWAYS_USAGE_DESCRIPTION": "This app wants to get your location always, even this app runs in background."
+      }
     },
     "platforms": [
       "android"
